feat: localize tests, admin-tests and test_passage

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,64 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  helpers:
+    submit:
+      test:
+        create: "Create test"
+        update: "Update test"
+    label:
+      test:
+        title: "Title"
+        level: "Level"
+        category_id: "Category"
+    collection_select:
+
+  shared:
+    errors:
+      header:
+        one: "%{count} error detected"
+        other: "%{count} errors detected"
+
+  tests:
+    index:
+      header: "All tests"
+      body:
+        title: "Title"
+        level: "Level"
+        questions: "Questions"
+        action: "Action"
+    test: 
+      start_button: "Start"
+
+  test_passages:
+    result:
+      header: "Test %{title} has been successfully finished"
+      success_html: "You passed the test! <br>The score is:"
+      fail_html: "You didn't pass the test. <br>The score is:"
+    show:
+      header: "Passing the %{title} test"
+      current_question: "Question %{current} out of %{total}"
+      submit: "Next"
+
+  admin:
+    tests:
+      create:
+        success: "Test has been created"
+      index:
+        header: "All tests"
+      new:
+        header: "Create new test"
+      edit:
+        header: "Edit the test"
+
+  navigation:
+    links:
+      show: "Show"
+      new: "New test"
+      edit: "Edit"
+      delete: 
+        method: "Delete"
+        confirm: "Are you sure?"
+      to_all_tests: "Back to all tests"
+
+  tests_mailer:
+    completed_test:
+      subject: "You have complited the TestGuru test"
