--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,7 +9,8 @@ en:
         title: "Title"
         level: "Level"
         category_id: "Category"
-    collection_select:
+    select:
+      prompt: "Please select:"
 
   shared:
     errors:
