--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -9,6 +9,8 @@ ru:
         title: "Название"
         level: "Уровень"
         category_id: "Категория"
+    select:
+      prompt: "Выберите:"
 
   shared:
     errors:
