--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -40,6 +40,9 @@ ru:
       header: "Вы проходите %{title} тест"
       current_question: "Вопрос %{current} из %{total}"
       submit: "Далее"
+    gist:
+      success: "Gist has been successfully created!"
+      failure: "An error has occured while saving gist"
 
   admin:
     tests:
