--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,8 +39,8 @@ en:
       current_question: "Question %{current} out of %{total}"
       submit: "Next"
     gist:
-      success: "Gist успешно сохранен!"
-      failure: "Во время сохранения gist произошла ошибка"
+      success_html: "Gist has been successfully created: "
+      failure: "An error has occured while saving gist"
 
   admin:
     tests:
@@ -66,3 +66,7 @@ en:
   tests_mailer:
     completed_test:
       subject: "You have complited the TestGuru test"
+
+  services:
+    gist_question_service:
+      description: "A question about %{title} from TestGuru"    
