--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -41,8 +41,8 @@ ru:
       current_question: "Вопрос %{current} из %{total}"
       submit: "Далее"
     gist:
-      success: "Gist has been successfully created!"
-      failure: "An error has occured while saving gist"
+      success_html: "Gist успешно сохранен: "
+      failure: "Во время сохранения gist произошла ошибка"
 
   admin:
     tests:
@@ -68,3 +68,7 @@ ru:
   tests_mailer:
     completed_test:
       subject: "Вы прошли тест на TestGuru"
+
+  services:
+    gist_question_service:
+      description: "Вопрос про %{title} от TestGuru"  
