feat: implement gist views

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -2,6 +2,8 @@ en:
   activerecord:
     models:
       test: "Test"
+      question: "Question"
+      user: "User"
 
     attributes:
       test:
