--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -2,6 +2,8 @@ ru:
   activerecord:
     model:
       test: "Тест"
+      question: "Вопрос"
+      user: "Пользователь"
 
     attributes:
       test:
