--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -66,3 +66,6 @@ ru:
         few: "%{resource}: сохранение не удалось из-за %{count} ошибок"
         many: "%{resource}: сохранение не удалось из-за %{count} ошибок"
         other: "%{resource}: сохранение не удалось из-за %{count} ошибки"
+  links:
+    forgot_password: "Забыли пароль?"
+    no_confirm_instruction: "Не получили письмо с подтверждением?"
