feat: add time and timer to test passage

--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -9,6 +9,7 @@ en:
     attributes:
       test:
         title: "Title"
+        time: "Time (if required)"
       question:
         body: "Body"
       answer:
